New class: AutonImp Some modifications on Auton test and base library

--- a/opsys/unix/Makefile
+++ b/opsys/unix/Makefile
@@ -1,8 +1,8 @@
 # Makefile for my basic library
 #
 
-NAME                 =  Unix Sources
-SRCDIR               =  .
+export NAME                 =  Unix Sources
+export SRCDIR              ?=  .
 
 .PHONY: all
 all: _everything
