New file structure for operating system independency
Note: It is tested only on Android, the Unix/Linux compilation is broken yet.
      See the next commit(s) for those changes.

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,9 +5,11 @@ NAME                 =  Basic
 VERS_MAJOR           =  1
 VERS_MINOR           =  1
 
+OPERATING_SYSTEM        ?=  __unknown_opsys__
+
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-export SRCDIR        =  . ../opsys/unix
+export SRCDIR        =  . ../opsys/$(OPERATING_SYSTEM)
 
 .PHONY: all
 all: _everything
@@ -21,5 +23,6 @@ export LFLAGS       +=  $(MY_PROJECT_LIBS)
 .PHONY: clean
 clean:
 	@echo " - Cleaning basic library..."
-	@rm -rf $(BINDIR) $(OBJECTS) $(Y_CPPFILES) $(Y_HEADERS) $(DEPENDS)
+	@rm -rf $(BINDIR)
+	@rm -f $(MY_BASELIB)/include/public $(OBJECTS) $(Y_CPPFILES) $(Y_HEADERS) $(DEPENDS)
 
