--- a/opsys/android/Makefile
+++ b/opsys/android/Makefile
@@ -1,18 +1,7 @@
-# Makefile for my basic library
+# Makefile for my basic library - Android-specific part
 #
 
 export NAME                 =  Android-specific
-export SRCDIR              ?=  .
 
-.PHONY: all
-all: _everything
-
-include $(SCRIPTDIR)/makesource
-
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
-.PHONY: clean
-clean:
-	$(SILENT_MODE)echo " - Cleaning $(NAME) objects..."
-	$(SILENT_MODE)rm -f $(OBJECTS) $(Y_CPPFILES) $(Y_HEADERS) $(DEPENDS)
+include $(SCRIPTDIR)/makelib
 
