Unix compilation build fix (hack yet)

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,6 +7,12 @@ VERS_MINOR           =  1
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
+SRCDIR               =  . ../generic
+
+ifneq ($(OPERATING_SYSTEM), )
+SRCDIR              +=  ../opsys/$(OPERATING_SYSTEM)
+endif
+
 include $(SCRIPTDIR)/makelib
 
 export LFLAGS       +=  $(MY_PROJECT_LIBS)
